# ecommerce_restful_backend

./: .env  .example.env  README.md  docker-compose.yml  keys.py  manage.py  pyproject.toml  requirements.txt
accounts/: admin.py  factories.py  models.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_employee_company.py  0003_alter_employee_company.py  0004_alter_employee_phone_number.py  0005_alter_employee_phone_number.py  0006_alter_employee_phone_number.py  0007_user_role.py  0008_employee_photo.py  0009_auto_20210827_1525.py  0010_alter_user_options.py
data/: config.py
ecommerce_dns/: asgi.py  settings.py  urls.py  wsgi.py
shop/: admin.py  factories.py  models.py  serializers.py  test_views.py  tests.py  urls.py  views.py
shop/management/commands/: setup_test_data.py
shop/migrations/: 0001_initial.py  0002_alter_item_sub_category.py  0002_auto_20210729_1441.py  0002_auto_20210811_1428.py  0002_auto_20210817_1411.py  0003_alter_company_phone_number.py  0003_alter_item_description.py  0003_auto_20210729_1631.py  0004_alter_company_location.py  0004_auto_20210729_1656.py  0004_auto_20210811_1452.py  0005_alter_cartitem_cart.py  0005_alter_company_name.py  0005_company_slug.py  0006_auto_20210801_1135.py  0006_auto_20210817_1427.py  0007_auto_20210817_1428.py  0008_auto_20210817_1432.py  0009_alter_cart_user.py  0010_auto_20210822_1237.py  0011_auto_20210822_1243.py  0012_auto_20210827_1525.py  0013_auto_20210827_1552.py  0014_company_owner.py
shop/serializers/: get_serializers.py  post_serializers.py
